fix: single theme dark mode

--- a/packages/valaxy-theme-yun/styles/common/markdown.scss
+++ b/packages/valaxy-theme-yun/styles/common/markdown.scss
@@ -5,7 +5,7 @@
   --c-toc-link: var(--va-c-text-light);
 }
 
-html.dark {
+.dark {
   .markdown-body {
     --c-toc-link: var(--va-c-text-dark);
   }
