--- a/packages/valaxy/client/styles/common/custom-blocks.scss
+++ b/packages/valaxy/client/styles/common/custom-blocks.scss
@@ -12,7 +12,7 @@
   --va-c-text-warning: #544500;
 }
 
-html.dark {
+.dark {
   --va-c-text-warning: #ffea8a;
 }
 
