--- a/packages/valaxy/client/styles/global/reset.scss
+++ b/packages/valaxy/client/styles/global/reset.scss
@@ -17,3 +17,7 @@ hr {
   opacity: 0.2;
   margin: 1rem;
 }
+
+button {
+  background-color: transparent;
+}
